Make RemoveUnusedImportsStep round-trippable