@@ -1,5 +1,5 @@
 /*
- * Copyright 2016-2023 DiffPlug
+ * Copyright 2016-2024 DiffPlug
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,15 +15,17 @@
  */
 package com.diffplug.spotless.java;
 
-import java.util.Arrays;
+import java.util.List;
 import java.util.Objects;
 
 import com.diffplug.spotless.FormatterStep;
 import com.diffplug.spotless.Provisioner;
+import com.diffplug.spotless.RoundedStep;
 
 /** Uses google-java-format or cleanthat.UnnecessaryImport, but only to remove unused imports. */
-public class RemoveUnusedImportsStep {
-	static final String NAME = "removeUnusedImports";
+public class RemoveUnusedImportsStep implements RoundedStep {
+	private static final long serialVersionUID = 1L;
+	private static final String NAME = "removeUnusedImports";
 
 	static final String GJF = "google-java-format";
 	static final String CLEANTHAT = "cleanthat-javaparser-unnecessaryimport";
@@ -34,7 +36,7 @@ public class RemoveUnusedImportsStep {
 	// prevent direct instantiation
 	private RemoveUnusedImportsStep() {}
 
-	public static final String defaultFormatter() {
+	public static String defaultFormatter() {
 		return GJF;
 	}
 
@@ -45,16 +47,12 @@ public class RemoveUnusedImportsStep {
 
 	public static FormatterStep create(String unusedImportRemover, Provisioner provisioner) {
 		Objects.requireNonNull(provisioner, "provisioner");
-
-		if (GJF.equals(unusedImportRemover)) {
-			return FormatterStep.createLazy(NAME,
-					() -> new GoogleJavaFormatStep.State(NAME, GoogleJavaFormatStep.defaultVersion(), provisioner),
-					GoogleJavaFormatStep.State::createRemoveUnusedImportsOnly);
-		} else if (CLEANTHAT.equals(unusedImportRemover)) {
-			return FormatterStep.createLazy(NAME,
-					() -> new CleanthatJavaStep.State(NAME, CleanthatJavaStep.defaultGroupArtifact(), CleanthatJavaStep.defaultVersion(), "99.9", Arrays.asList(CLEANTHAT_MUTATOR), Arrays.asList(), false, provisioner),
-					CleanthatJavaStep.State::createFormat);
-		} else {
+		switch (unusedImportRemover) {
+		case GJF:
+			return GoogleJavaFormatStep.createRemoveUnusedImportsOnly(provisioner);
+		case CLEANTHAT:
+			return CleanthatJavaStep.create(CleanthatJavaStep.defaultGroupArtifact(), CleanthatJavaStep.defaultVersion(), "99.9", List.of(CLEANTHAT_MUTATOR), List.of(), false, provisioner);
+		default:
 			throw new IllegalArgumentException("Invalid unusedImportRemover: " + unusedImportRemover);
 		}
 	}
